# humos

./: .gitignore  .vercelignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DISCOVERY.md  LICENSE  PLAN-opencode-adapter.md  PLAN-signal.md  README.md  RELEASING.md  SECURITY.md  STRATEGY.md  TODOS.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
crates/humos-client/: Cargo.toml
crates/humos-client/src/: lib.rs
crates/humos-client/tests/: ipc_client_test.rs
docs/: RELEASE.md  index.html  install.sh  version.json
docs/landing/: index.html
homebrew/: README.md
homebrew/Casks/: humos.rb
humos-daemon/: Cargo.toml  README.md
humos-daemon/src/: config.rs  doctor.rs  lib.rs  main.rs  scanner.rs
humos-daemon/src/index/: keyword.rs  mod.rs  redact.rs  schema.rs
humos-daemon/src/ipc/: handler.rs  mod.rs  protocol.rs
humos-mcp/: Cargo.toml  README.md
humos-mcp/src/: doctor.rs  ipc_client.rs  lib.rs  main.rs
humos-mcp/src/mcp/: mod.rs  protocol.rs  server.rs  tools.rs
humos-mcp/tests/: stdio_protocol.rs
scripts/: build-dmg.sh  build-release.sh  find-stale-installs.sh  install-daemon.sh  install-hooks.sh  preflight.sh  release.sh  sync-versions.sh
scripts/hooks/: README.md  pre-commit
src/: App.tsx  BrainRibbon.tsx  DaemonLoginBanner.tsx  PipeConfig.tsx  SessionCard.tsx  UpdateBanner.tsx  WereAwayBanner.tsx  formatDateTime.test.ts  index.css  main.tsx  tokens.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: applescript.rs  daemon_client.rs  event_log.rs  lib.rs  main.rs  model_prices.rs  parser.rs  pipe.rs  updater.rs  watcher.rs
src-tauri/src/providers/: claude.rs  codex.rs  mod.rs  opencode.rs
src/hooks/: useRelatedContexts.ts  useVersionCheck.ts
src/utils/: formatDateTime.ts
