[package]
name = "humos-daemon"
version = "0.4.4"
edition = "2021"
description = "Background daemon for humOS coordination runtime. Owns the tantivy session index and serves it to humos-app and humos-mcp over a local Unix socket."
authors = ["Bolu"]

[[bin]]
name = "humos-daemon"
path = "src/main.rs"

[lib]
name = "humos_daemon"
path = "src/lib.rs"

[dependencies]
humos = { path = "../src-tauri" }

tokio = { version = "1", features = ["full"] }
tantivy = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"
clap = { version = "4", features = ["derive"] }
glob = "0.3"

[dev-dependencies]
tempfile = "3"
