[package]
name = "humos"
version = "0.4.4"
description = "humOS — AI agent coordination OS for your local machine"
authors = ["Bolu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "humos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = { version = "6", features = ["macos_fsevent"] }
notify-debouncer-mini = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
glob = "0.3"

[dev-dependencies]
tempfile = "3"

