[package]
name = "humos-client"
version = "0.1.0"
edition = "2021"
description = "Thin IPC client for the humos-daemon Unix socket"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
humos-daemon = { path = "../../humos-daemon" }

[dev-dependencies]
tempfile = "3"
